Add open key for the new world

--- a/index.html
+++ b/index.html
@@ -4256,6 +4256,26 @@
                     <p><a href="http://siberiawolf.com/free_programming/index.html">免费的编程中文书籍索引</a>
                     </p>
                 </div>
+                <div>
+                    <div class="ad-list">
+                        <h2>开启新世界大门的🔑</h2>
+                        <ul>
+                            <li>
+                                <a href="https://www.vultr.com/?ref=706872" title="VultrVultr 注册即送 30 刀，节点多，最便宜 2.5 刀一个月" onclick="trackOutboundLink('https://www.vultr.com/?ref=706872', 'Host-vultr', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qbnm4j308g02saa8.jpg"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e" title="Linode注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.linode.com/?r=9343985e91d6bd860b71f5284ea5c8f674f2775e', 'Host-linode', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qir5cj308g02swew.jpg"></a>
+                            </li>
+                            <li>
+                                <a href="https://www.digitalocean.com/?refcode=ef15936ffa93" title="DigitalOcean注册即送 10 刀，节点多，最便宜 5 刀一个月" onclick="trackOutboundLink('https://www.digitalocean.com/?refcode=ef15936ffa93', 'Host-digitalocean', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qnb5ij308g02s0t1.jpg"></a>
+                            </li>
+                            <li>
+                                <a href="https://bandwagonhost.com/aff.php?aff=133" title="BandwagonHost注册即送 10 刀, 节点多，最便宜 2.99 刀一个月" onclick="trackOutboundLink('https://bandwagonhost.com/aff.php?aff=133', 'Host-bandwagonhost', 'click');" target="_blank"><img class="carousel-inner img-responsive img-rounded" src="http://ww1.sinaimg.cn/large/006tNbRwly1ffe62qvivcj308g02st92.jpg"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                
                 <div id="license">
                     <h2>Disclaimer</h2>
                     <strong>版权归原作者所有，这里仅做收集整理，欢迎自由转载-非商用-非衍生-保持署名和本网站网址。</strong>
