disable Syntax highlight code blocks

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -306,7 +306,7 @@
     <script type="text/javascript">
     $(function() {
         // Syntax highlight code blocks.
-        prettyPrint();
+        //prettyPrint();
 
         // Spy on scroll position for real-time updating of current section.
         $('body').scrollspy();
