Add hosted by coding pages to site footer

--- a/donate.html
+++ b/donate.html
@@ -1695,7 +1695,7 @@
     <div id="footer_wrap" class="outer">
         <footer class="inner">
             <p class="copyright">Made by <a href="http://www.inferjay.com/">脉脉不得语</a></p>
-            <p class="published">Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+            <p class="published">Hosted by <a href="https://pages.coding.me" style="font-weight: bold" target="_blank">Coding Pages</a> and <a href="https://pages.github.com" target="_blank">GitHub Pages</a></p>
         </footer>
     </div>
     <!-- 评论JS代码 start (一个网页只需插入一次) -->
