--- a/gay_friends.html
+++ b/gay_friends.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="icon" type="image/x-icon" href="static/image/favicon.ico">
     <title>AndroidDevTools</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="翻墙 下载 最新版 Android开发工具 ADT Bundle Android Studio AndroidStudio 2.0 Android SDK SDK Tools Gradle Android SDK下载 android sdk下载 Android Studio下载 android studio下载 Gradle下载  gradle下载 SDK Tools下载 sDK tools下载">
