modify backtotop button style

--- a/index.html
+++ b/index.html
@@ -4308,8 +4308,7 @@
     </section>
     <div class="zh-backtotop">
         <a data-action="backtotop" data-tip="s$r$回到顶部" class="btn-backtotop btn-action">
-            <div class="arrow"></div>
-            <div class="stick"></div>
+            <img class="arrow" src="static/image/backtotop_arrow.png">
         </a>
     </div>
     <!-- FOOTER  -->
@@ -4391,7 +4390,6 @@
     <script src="static/js/bootstrap.min.js"></script>
     <script src="static/js/jquery.smooth-scroll.min.js"></script>
     <script src="static/js/jquery-maven-artifact.min.js"></script>
-    <script src="static/js/prettify.js"></script>
     <script src="static/js/jquery.toTop.min.js"></script>
     <script src="static/js/google-analytics.js"></script>
     <script src="static/js/unslider.min.js"></script>
@@ -4440,7 +4438,7 @@
     <script type="text/javascript">
         $(function() {
             // Syntax highlight code blocks.
-            prettyPrint();
+            //prettyPrint();
 
             // Spy on scroll position for real-time updating of current section.
             $('body').scrollspy();
