Fixed donate and friend page don't show backtotop arrow icon error

--- a/donate.html
+++ b/donate.html
@@ -181,7 +181,7 @@
                     </p>
                     <br/>
                     <blockquote style="color: gray">
-                    <strong style="color: red">注意:</strong>微信现在看不到转账人的昵称了,请通过微信支付进行捐赠的小伙伴在本页面底部的评论区留下你的昵称和捐赠金额，不然在捐赠列表里只能显示捐赠金额！！！
+                    <strong style="color: red">注意:</strong>微信现在看不到转账人的昵称了,请通过微信支付进行捐赠的小伙伴在本页面底部的评论区留下你的昵称和捐赠金额，否则在捐赠列表里就只能显示捐赠金额！
                     </blockquote>
                 </div>
                 <div class="donate-method-qr">
@@ -1688,8 +1688,7 @@
     </section>
     <div class="zh-backtotop">
         <a data-action="backtotop" data-tip="s$r$回到顶部" class="btn-backtotop btn-action">
-            <div class="arrow"></div>
-            <div class="stick"></div>
+            <img class="arrow" src="static/image/backtotop_arrow.png">
         </a>
     </div>
     <!-- FOOTER  -->
