--- a/gay_friends.html
+++ b/gay_friends.html
@@ -268,8 +268,7 @@
     </section>
     <div class="zh-backtotop">
         <a data-action="backtotop" data-tip="s$r$回到顶部" class="btn-backtotop btn-action">
-            <div class="arrow"></div>
-            <div class="stick"></div>
+            <img class="arrow" src="static/image/backtotop_arrow.png">
         </a>
     </div>
     <br/>
