Add Android Studio 3.0 Preview2 and Preview3 link

--- a/index.html
+++ b/index.html
@@ -320,9 +320,79 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview3 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.2/android-studio-ide-171.4056697-windows.zip">android-studio-ide-171.4056697-windows.zip</a>
+                                </td>
+                                <td>709353723 bytes</td>
+                                <td>35ecb54abf24aff4aa380214dad9de75a8e5bd1d66fcc4c3f139757896094c21</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcly1fgf2tbh4plj31kw0mztg2.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.2/android-studio-ide-171.4056697-windows32.zip">android-studio-ide-171.4056697-windows32.zip</a>
+                                </td>
+                                <td>708818867 bytes</td>
+                                <td>9bb0f3b1c0c1e7418ef78dcc78d256270c784b6785c23f0e93d33409b4999260</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.2/android-studio-ide-171.4056697-mac.zip">android-studio-ide-171.4056697-mac.dmg</a>
+                                </td>
+                                <td>708414228 bytes</td>
+                                <td>0d2c10fb9d904a23adebda12a8bef76d5453ed15c95b09abc0a33ba8d9f14880</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.2/android-studio-ide-171.4056697-linux.zip">android-studio-ide-171.4056697-linux.zip</a>
+                                </td>
+                                <td>707812159 bytes</td>
+                                <td>1c8a40e0c56774995af5d8629abda31d9f4ea7ffe6b690470c78a60fba12d7fb</td>
+                            </tr>
+                            <!-- 3.0 Preview2 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.2/android-studio-ide-171.4056697-windows.zip">android-studio-ide-171.4041253-windows.zip</a>
+                                </td>
+                                <td>709188792 bytes</td>
+                                <td>2b49c8d643743b1357cf398bcbd46efe8decd9a47955246accd57f2b9615ddc6</td>
+                                <td rowspan="5"><a href="http://ws2.sinaimg.cn/large/006tKfTcly1fgf2hmz28ej31kw0k3gsg.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.1/android-studio-ide-171.4041253-windows32.zip">android-studio-ide-171.4041253-windows32.zip</a>
+                                </td>
+                                <td>708653936 bytes</td>
+                                <td>9c3c2d1c690af7213b366769d347803e84511ee65ad3bbf449abef0f835f5217</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.1/android-studio-ide-171.4041253-mac.zip">android-studio-ide-171.4041253-mac.dmg</a>
+                                </td>
+                                <td>708248998 bytes</td>
+                                <td>1964f4aad24e9f3c13e256307690a490df6a335a48b72f26f1fdd49bed719643</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.1/android-studio-ide-171.4041253-linux.zip">android-studio-ide-171.4041253-linux.zip</a>
+                                </td>
+                                <td>707647232 bytes</td>
+                                <td>ae6ba335ef007775ce4c957e381089e1a4d70953f84f7bd41e794c8cfd8a0d75</td>
+                            </tr>
                             <!-- 3.0 Preview -->
                             <tr>
-                                <td rowspan="5">3.0 Preview</td>
+                                <td rowspan="5">3.0 Preview1</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">Windows</td>
@@ -340,9 +410,7 @@
                                 <td>5d7101353eee3d0bc201be01afca6e40d2643bb3ae5e99ec94e0cc0400698de0</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <nobr>Mac OS X</nobr>
-                                </td>
+                                <td>Mac OS X</td>
                                 <td align="left">
                                     <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.0/android-studio-ide-171.4010489-mac.zip">android-studio-ide-171.4010489-mac.dmg</a>
                                 </td>
