Add materialdoc and codelabs link to gayfriends page

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -254,6 +254,16 @@
                                 <img src="http://www.gcssloop.com/assets/siteinfo/friends/gcssloop.jpg" />
                             </a>
                         </li>
+                        <li>
+                            <a href="http://www.materialdoc.cn" target="_blank" title="Material Design 开发者参考文档">
+                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgf49wir8cj303m01saa3.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://code-labs.cn/io2017" target="_blank" title="Google I/O CodeLabs 2017">
+                                <img src="http://ws2.sinaimg.cn/large/006tKfTcly1fgf49wogaoj303m01s0sq.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
