Add new qiniu AD

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
         </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-        <a href="https://0x7.me/UIKc" title="七牛云六月大派送，周边玩偶、神秘大礼、500 抵用券等你来拿！" onclick="trackOutboundLink('https://0x7.me/UIKc', 'AD-QiNiuJuneBigGift', 'click');" target="_blank">
-            <img src="http://ws1.sinaimg.cn/large/006tNc79ly1fg6z7q93dej304605kglp.jpg">
+        <a href="http://t.cn/RowfzNX" title="七牛云六周年感恩季，1500 元福利等你拿！" onclick="trackOutboundLink('http://t.cn/RowfzNX', 'AD-QiNiuSixAnniversary', 'click');" target="_blank">
+            <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fgoj7mm6hvj304605kweo.jpg">
         </a>
     </div>
 
