Add Android Studio preview4 download link

--- a/index.html
+++ b/index.html
@@ -320,6 +320,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview4 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.3/android-studio-ide-171.4101728-windows.zip">android-studio-ide-171.4101728-windows.zip</a>
+                                </td>
+                                <td>719674225 bytes</td>
+                                <td>b8822f8e0cd4e0f6531b9079b590ea6711e832bc3945e5a7d4af9c858f699ae1</td>
+                                <td rowspan="5"><a href="http://ws2.sinaimg.cn/large/006tNc79ly1fgolct0zujj31kw0n9qaq.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.3/android-studio-ide-171.4101728-windows32.zip">android-studio-ide-171.4101728-windows32.zip</a>
+                                </td>
+                                <td>719139369 bytes</td>
+                                <td>0a85c336d71f111dc0ac14da9e11a6d15dcb3cda9e4f51bab31272fecc85e550</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.3/android-studio-ide-171.4101728-mac.zip">android-studio-ide-171.4101728-mac.dmg</a>
+                                </td>
+                                <td>718740347 bytes</td>
+                                <td>f15239ea73105ab6e552e9196e9d1fa8978f94ea84f7a727144de89ee9a286ff</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.3/android-studio-ide-171.4101728-linux.zip">android-studio-ide-171.4101728-linux.zip</a>
+                                </td>
+                                <td>718128277 bytes</td>
+                                <td>98ff0ed9093022d834c985e3457462e50eaf5898459d208e748edb1bd3f092af</td>
+                            </tr>
                             <!-- 3.0 Preview3 -->
                             <tr>
                                 <td rowspan="5">3.0 Preview3</td>
