Add amazon book popularize link

--- a/index.html
+++ b/index.html
@@ -4359,6 +4359,9 @@
                     <p>50 Android Hacks这本书分12个部分介绍了50个Android开发的小技巧。</p>
                     <p><a href="http://siberiawolf.com/free_programming/index.html">免费的编程中文书籍索引</a>
                     </p>
+                    <p>
+                        <a href="https://www.amazon.cn/b?node=1897235071&tag=androiddevtools-bottom-book-23&camp=356&creative=6584&linkCode=ur1&adid=0CF8XMDA7PZHJSJ3BDFJ&" alt="50 万图书，满 100 减 20元">50 万图书，满 100 减 20元<br><img src="http://ws4.sinaimg.cn/large/006tKfTcly1fgrec9liaaj30k802iaao.jpg"></a>
+                    </p>
                 </div>
                 <div>
                     <div class="ad-list">
