Add radom show book list data function

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -177,7 +177,7 @@
                 <h1 class="content-title">好基友们</h1>
                 <p align="center">以下是我的好基友们，他们既是Android牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年。</p>
                 <br/>
-                <div class="gay_friends_list">
+                <div id="gay_friends_list" class="link-image-list">
 	                <ul>
 	                    <li>
 	                        <a href="http://gank.io" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
@@ -226,7 +226,7 @@
 	                    </li>
                         <li>
                             <a href="http://www.race604.com" title="专注 Android 移动应用开发，在开发中积累和成长。">
-                                <img src="http://ww4.sinaimg.cn/large/8a41f469jw1f27s3aeagij207803kt8o.jpg" />
+                                <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fgt5qreedyj303m01s0sl.jpg" />
                             </a>
                         </li>
                         <li>
