--- a/index.html
+++ b/index.html
@@ -174,10 +174,17 @@
             </div>
         </div>
     </header>
-    <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
-        <a href="http://t.cn/RowfzNX" title="七牛云六周年感恩季，1500 元福利等你拿！" onclick="trackOutboundLink('http://t.cn/RowfzNX', 'AD-QiNiuSixAnniversary', 'click');" target="_blank">
-            <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fgoj7mm6hvj304605kweo.jpg">
-        </a>
+    <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1512px;">
+        <div class="ad-float-right">
+            <a href="http://t.cn/RowfzNX" title="七牛云六周年感恩季，1500 元福利等你拿！" onclick="trackOutboundLink('http://t.cn/RowfzNX', 'AD-QiNiuSixAnniversary', 'click');" target="_blank">
+                <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fgoj7mm6hvj304605kweo.jpg">
+            </a>
+        </div>
+        <div class="ad-float-right">
+            <a href="http://t.cn/RoV2hNq" title="碎片时代，更要深入阅读，50 万图书，满 100 减 20元！" onclick="trackOutboundLink('http://t.cn/RoV2hNq', 'AD-Amazon-book-100-20', 'click');" target="_blank">
+                <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fgt9sf4jlxj304605k75h.jpg">
+            </a>
+        </div>
     </div>
 
     <div class="banner has-dots">
@@ -4414,41 +4421,6 @@
             <p class="published">Hosted by <a href="https://pages.coding.me" style="font-weight: bold" target="_blank">Coding Pages</a> and <a href="https://pages.github.com" target="_blank">GitHub Pages</a></p>
         </footer>
     </div>
-    <!--   浮动广告      -->
-    <script>
-        var lastScrollY = 0;
-        var initTop = 340;
-
-        function heartBeat() {
-            var diffY = 0;
-            if (window.pageYOffset) { //这一条滤去了大部分， 只留了IE678
-                diffY = window.pageYOffset;
-            } else if (document.documentElement.scrollTop) { //IE678 的非quirk模式
-                diffY = document.documentElement.scrollTop;
-            } else if (document.body.scrolltop) { //IE678 的quirk模式
-                diffY = document.body.scrolltop;
-            }
-            var percent = .1 * (diffY - lastScrollY);
-            if (percent > 0) {
-                percent = Math.ceil(percent);
-            } else {
-                percent = Math.floor(percent);
-            }
-            // if (document.all.ad_right_float.style.pixelTop) {
-            //              console.log('pixelTop=' + document.all.ad_right_float.style.pixelTop);
-            //  document.all.ad_right_float.style.pixelTop += percent;
-            // } else {
-            //  var top = String(lastScrollY + initTop) + "px";
-            //              console.log('top=' + top);
-            //  document.all.ad_right_float.style.top = top;
-            // }
-
-            var top = String(lastScrollY + initTop) + "px";
-            document.all.ad_right_float.style.top = top;
-            lastScrollY = lastScrollY + percent;
-        }
-        window.setInterval("heartBeat()", 1);
-    </script>
     <!-- 评论JS代码 start (一个网页只需插入一次) -->
     <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
     <script>
@@ -4489,6 +4461,41 @@
     <script src="static/js/jquery.toTop.min.js"></script>
     <script src="static/js/google-analytics.js"></script>
     <script src="static/js/unslider.min.js"></script>
+    <!--   浮动广告      -->
+    <script>
+        var lastScrollY = 0;
+        var initTop = 340;
+
+        function heartBeat() {
+            var diffY = 0;
+            if (window.pageYOffset) { //这一条滤去了大部分， 只留了IE678
+                diffY = window.pageYOffset;
+            } else if (document.documentElement.scrollTop) { //IE678 的非quirk模式
+                diffY = document.documentElement.scrollTop;
+            } else if (document.body.scrolltop) { //IE678 的quirk模式
+                diffY = document.body.scrolltop;
+            }
+            var percent = .1 * (diffY - lastScrollY);
+            if (percent > 0) {
+                percent = Math.ceil(percent);
+            } else {
+                percent = Math.floor(percent);
+            }
+            // if (document.all.ad_right_float.style.pixelTop) {
+            //              console.log('pixelTop=' + document.all.ad_right_float.style.pixelTop);
+            //  document.all.ad_right_float.style.pixelTop += percent;
+            // } else {
+            //  var top = String(lastScrollY + initTop) + "px";
+            //              console.log('top=' + top);
+            //  document.all.ad_right_float.style.top = top;
+            // }
+
+            var top = String(lastScrollY + initTop) + "px";
+            $("#auto-scroll-ad-box").css("top", top);
+            lastScrollY = lastScrollY + percent;
+        }
+        window.setInterval("heartBeat()", 1);
+    </script>
     <!-- Google Analytics -->
     <script>
         (function(i, s, o, g, r, a, m) {
