--- a/gay_friends.html
+++ b/gay_friends.html
@@ -264,6 +264,16 @@
                                 <img src="http://ws2.sinaimg.cn/large/006tKfTcly1fgf49wogaoj303m01s0sq.jpg" />
                             </a>
                         </li>
+                        <li>
+                            <a href="https://www.typeisbeautiful.com" target="_blank" title="Type is Beautiful">
+                                <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fgu528zmynj303m01s743.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://green-android.org/" target="_blank" title="Android 绿色应用公约">
+                                <img src="http://ws4.sinaimg.cn/large/006tNc79ly1fguztaftm8j303m01sweg.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
