add gay friends link

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -175,7 +175,7 @@
         <div id="body-container" class="container">
             <div class="row">
                 <h1 class="content-title">好基友们</h1>
-                <p align="center">以下是我的好基友们，他们既是Android牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年。</p>
+                <p align="center">以下是我的好基友们，他们既是Android牛人，也是活跃在社区，乐于分享帮助他人，推动技术进步的有为青年，以及其他一些有用的、有意思的网站。</p>
                 <br/>
                 <div id="gay_friends_list" class="link-image-list">
 	                <ul>
@@ -272,6 +272,31 @@
                         <li>
                             <a href="https://green-android.org/" target="_blank" title="Android 绿色应用公约">
                                 <img src="http://ws4.sinaimg.cn/large/006tNc79ly1fguztaftm8j303m01sweg.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://www.studyjamscn.com" target="_blank" title="Study Jams 活动可以帮助任何零基础的学员入门 Android 开发，无需任何费用，优秀学员还可以得到 Google 的纪念证书。">
+                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgviwva49pj303m01sdfu.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://developers.google.cn" target="_blank" title="无需翻墙就可以访问的 Google Developers 网站">
+                                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fgvjwejeksj303m01sjr9.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" title="Google 女性开发者网站">
+                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgvjwecf5nj303m01st8l.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://gdgzhengzhou.org" target="_blank" title="郑州谷歌开发者社区官网">
+                                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fgvjweow2zj303m01s747.jpg" />
+                            </a>
+                        </li>
+                        <li>
+                            <a href="http://choosealicense.online" target="_blank" title="如何选择一个开源授权协议？">
+                                <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgvm98gj52j303m01s0sm.jpg" />
                             </a>
                         </li>
 	                </ul>
