Add 第一行代码 第2版 link

--- a/index.html
+++ b/index.html
@@ -4959,6 +4959,26 @@
                     style: {
                         isRound: true
                     }
+                },
+                {
+                    title: "第一行代码——Android（第2版）",
+                    url: "http://t.cn/Roluf0E",
+                    description: "本书基于Android 7.0对第1版进行了全面更新，将所有知识点都在最新的Android系统上进行了重新适配，使用全新的Android Studio开发工具代替之前的Eclipse，并添加了对Material Design、运行时权限、多窗口模式、Gradle、RecyclerView、百分比布局、OkHttp、Lambda表达式等全新知识点的详细讲解。",
+                    img_url: "http://ws4.sinaimg.cn/large/006tKfTcly1fh120qi0t9j304605gaak.jpg",
+                    tags: "Android,Material Design,RecyclerView,Gradle, Android Studio,OkHttp,Lambda",
+                    isshow: true,
+                    isShowCover: true,
+                    isad: false,
+                    ad_config: {
+                        category: "AD",
+                        action: "click",
+                        label: "",
+                        value: "",
+                        nodeid: "",
+                    },
+                    style: {
+                        isRound: true
+                    }
                 }
             ]
         };
