Add Android Studio 3.0 Preview5 link

--- a/index.html
+++ b/index.html
@@ -327,6 +327,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview5 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview5</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.4/android-studio-ide-171.4141229-windows.zip">android-studio-ide-171.4141229-windows.zip</a>
+                                </td>
+                                <td>692198420 bytes</td>
+                                <td>5d6ef06aa6e84c271c7b375e6d0ce42316aefd022f9aa1646f5c614764d764e2</td>
+                                <td rowspan="5"><a href="http://ws1.sinaimg.cn/large/006tNc79ly1fh4oqqwnscj31g70gzgp0.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.4/android-studio-ide-171.4141229-windows32.zip">android-studio-ide-171.4141229-windows32.zip</a>
+                                </td>
+                                <td>691669797 bytes</td>
+                                <td>6cd46fb94c66b19a6a79c85ea05417fd2b438fa73bcf522ac0bdbb62ca484151</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.4/android-studio-ide-171.4141229-mac.zip">android-studio-ide-171.4141229-mac.dmg</a>
+                                </td>
+                                <td>691486504 bytes</td>
+                                <td>184aedbb1f014779e9cff3fb768e398bd05e47aa6e5433011f90d566a729f76d</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.4/android-studio-ide-171.4141229-linux.zip">android-studio-ide-171.4141229-linux.zip</a>
+                                </td>
+                                <td>690653842 bytes</td>
+                                <td>4acb8bd5db5eafd34ed461ea8ef9c67da6ad09b763e159c710d9fe16ab007d8f</td>
+                            </tr>
                             <!-- 3.0 Preview4 -->
                             <tr>
                                 <td rowspan="5">3.0 Preview4</td>
