Add hencoder qrcode

--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
                 <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fh5okerexkj304605kq37.jpg">
             </a>
         </div>
+        <div class="ad-float-right">
+            <a href="http://hencoder.com" title="扔物线辞职在家憋了一年的大招，良心之作。" onclick="trackOutboundLink('http://hencoder.com', 'AD-HenCoder', 'click');" target="_blank">
+                <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fh6h6gafp8j304605kq33.jpg">
+            </a>
+        </div>
     </div>
 
     <div class="banner has-dots">
@@ -4446,7 +4451,7 @@
     </section>
     <div class="zh-backtotop">
         <a data-action="backtotop" data-tip="s$r$回到顶部" class="btn-backtotop btn-action">
-            <img class="arrow" src="static/image/backtotop_arrow.png">
+            <img class="arrow" src="image/backtotop_arrow.png">
         </a>
     </div>
     <!-- FOOTER  -->
