--- a/index.html
+++ b/index.html
@@ -4451,7 +4451,7 @@
     </section>
     <div class="zh-backtotop">
         <a data-action="backtotop" data-tip="s$r$回到顶部" class="btn-backtotop btn-action">
-            <img class="arrow" src="image/backtotop_arrow.png">
+            <img class="arrow" src="static/image/backtotop_arrow.png">
         </a>
     </div>
     <!-- FOOTER  -->
