Add hencoder link

--- a/gay_friends.html
+++ b/gay_friends.html
@@ -299,6 +299,11 @@
                                 <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fgvm98gj52j303m01s0sm.jpg" />
                             </a>
                         </li>
+                        <li>
+                            <a href="http://hencoder.com" target="_blank" title="扔物线辞职在家憋了一年的大招，良心之作。">
+                                <img src="http://ws4.sinaimg.cn/large/006tNbRwly1fh92xjlh14j303m01sjr8.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
