add green android app plan link to right float sidebar

--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
                 <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fh5okerexkj304605kq37.jpg">
             </a>
         </div>
+        <div class="ad-float-right">
+            <a href="https://green-android.org/?utm_source=AndroidDevTools&utm_medium=right-float-sidebar" title="遵循公约的应用，后台不费电、手机不卡顿，跟 iPhone 一样省心。" onclick="trackOutboundLink('https://green-android.org/?utm_source=AndroidDevTools&utm_medium=right-float-sidebar', 'GreenAndroid', 'click');" target="_blank">
+                <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fhetfnhwh2j304605k3yg.jpg">
+            </a>
+        </div>
     </div>
 
     <div class="banner has-dots">
