--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
         </div>
         <div class="ad-float-right">
             <a href="http://t.cn/Ro1OZoN" title="Raspberry Pi 3 Model B 树莓派3代控制器 含系统卡 电源 散热片 保护外壳--奥松机器人RobotBase" onclick="trackOutboundLink('http://t.cn/Ro1OZoN', 'AD-Amazon-RaspberryPi-3-MB', 'click');" target="_blank">
-                <img src="http://ws2.sinaimg.cn/large/006tNc79ly1fh5okerexkj304605kq37.jpg">
+                <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fheu2sq17tj304605kq2w.jpg">
             </a>
         </div>
         <div class="ad-float-right">
-            <a href="https://green-android.org/?utm_source=AndroidDevTools&utm_medium=right-float-sidebar" title="遵循公约的应用，后台不费电、手机不卡顿，跟 iPhone 一样省心。" onclick="trackOutboundLink('https://green-android.org/?utm_source=AndroidDevTools&utm_medium=right-float-sidebar', 'GreenAndroid', 'click');" target="_blank">
+            <a href="http://t.cn/RKtmj6v" title="遵循公约的应用，后台不费电、手机不卡顿，跟 iPhone 一样省心。" onclick="trackOutboundLink('http://t.cn/RKtmj6v', 'GreenAndroid', 'click');" target="_blank">
                 <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fhetfnhwh2j304605k3yg.jpg">
             </a>
         </div>
