Add Android Studio 3.0 Preview6 link

--- a/index.html
+++ b/index.html
@@ -332,6 +332,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.0 Preview6 -->
+                            <tr>
+                                <td rowspan="5">3.0 Preview6</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.5/android-studio-ide-171.4163606-windows.zip">android-studio-ide-171.4163606-windows.zip</a>
+                                </td>
+                                <td>690127022 bytes</td>
+                                <td>e2400d2842cfccb407f7ae8b3987fdfe6edaa74bc53cf292a8e247e596fcfa77</td>
+                                <td rowspan="5"><a href="http://ws1.sinaimg.cn/large/006tKfTcly1fhh3519i1tj316g0fsacz.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.5/android-studio-ide-171.4163606-windows32.zip">android-studio-ide-171.4163606-windows32.zip</a>
+                                </td>
+                                <td>689598399 bytes</td>
+                                <td>bae730f5466b75181e2ce45f45928e248a0eb746c5bbefb74602caa10b78f17d</td>
+                            </tr>
+                            <tr>
+                                <td> Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.5/android-studio-ide-171.4163606-mac.zip">android-studio-ide-171.4163606-mac.dmg</a>
+                                </td>
+                                <td>689413737 bytes</td>
+                                <td>f08f6c10736148f3050c40ddb0742471d400358608f1dd1803b9bdb62023f737</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.5/android-studio-ide-171.4163606-linux.zip">android-studio-ide-171.4163606-linux.zip</a>
+                                </td>
+                                <td>688582452 bytes</td>
+                                <td>6f6a2459512b0b36bf3a142dfb2e9a1361ed6fb34bea435a62310e2709bfb6bf</td>
+                            </tr>
                             <!-- 3.0 Preview5 -->
                             <tr>
                                 <td rowspan="5">3.0 Preview5</td>
